data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2500.wast
;; 10. **Polymorphic Stack Type Handling**:    Introduce varied stack types before a `br_table` call, testing if the instruction adheres to stack-polymorphic rules and handles the stack type freely without mismatches, except following the context type sequence constraints.

(assert_invalid
  (module
    (func $polymorphic-stack-type-handling
      (block (result i32)
        (i32.const 0) (nop) 
        (br_table 0 0)
      )
    )
  )
  "type mismatch"
)